--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Ajani Small - Software Development</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-    
 <body>
-    This is my website
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I am a software developer with a passion for creating games, websites, visualizations, and AI-powered projects.</p>
+    </section>
+
+  
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>You can reach me at: <a href="mailto:ajanismall2005@gmail.com">ajanismall2005@gmail.com</a></p>
+        <p>Connect with me on <a href="https://github.com/AJANI2005" target="_blank">GitHub</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Ajani Small</p>
+    </footer>
 </body>
 </html>
